--- a/index.html
+++ b/index.html
@@ -597,34 +597,58 @@
             <div class="cards-big">
                 <article class="card-big__item">
                     <img class="card-big__img" src="./image/guide_buying_minimal_sofa.png" alt="begineer guide">
-                    <img class="card-big__tag">
+                    <img class="card-big__tag card-big__tag_furniture">
                     <p class="card-big__date">23 September 2022</p>
                     <h3 class="card-big__title">Begineer guide buying minimal sofa</h3>
                     <a class="card-big__link" href="#">Read more</a>
                 </article>
                 <article class="card-big__item">
-                    <img class="card-big__img" src="./image/guide_buying_minimal_sofa.png" alt="begineer guide">
-                    <img class="card-big__tag">
-                    <p class="card-big__date">23 September 2022</p>
-                    <h3 class="card-big__title">Begineer guide buying minimal sofa</h3>
+                    <img class="card-big__img" src="./image/table_computer.png" alt="table">
+                    <img class="card-big__tag card-big__tag_table">
+                    <p class="card-big__date card-big__date_table">26 September 2022</p>
+                    <h3 class="card-big__title">Buying best minimal computer table</h3>
                     <a class="card-big__link" href="#">Read more</a>
                 </article>
                 <article class="card-big__item">
-                    <img class="card-big__img" src="./image/guide_buying_minimal_sofa.png" alt="begineer guide">
-                    <img class="card-big__tag">
-                    <p class="card-big__date">23 September 2022</p>
-                    <h3 class="card-big__title">Begineer guide buying minimal sofa</h3>
+                    <img class="card-big__img" src="./image/Card_bench.png" alt="bench">
+                    <img class="card-big__tag card-big__tag_bench">
+                    <p class="card-big__date card-big__date_bench">15 September 2022</p>
+                    <h3 class="card-big__title">How to choose best modern bench</h3>
                     <a class="card-big__link" href="#">Read more</a>
                 </article>
                 <article class="card-big__item">
-                    <img class="card-big__img" src="./image/guide_buying_minimal_sofa.png" alt="begineer guide">
-                    <img class="card-big__tag">
-                    <p class="card-big__date">23 September 2022</p>
-                    <h3 class="card-big__title">Begineer guide buying minimal sofa</h3>
+                    <img class="card-big__img" src="./image/Card_chair.png" alt="begineer guide">
+                    <img class="card-big__tag card-big__tag_chair">
+                    <p class="card-big__date card-big__date_chair">10 September 2022</p>
+                    <h3 class="card-big__title">Best Summer Outfit
+                        Style in this Country</h3>
                     <a class="card-big__link" href="#">Read more</a>
                 </article>
             </div>
         </section>
+
+        <footer class="footer" id="footer">
+            <img class="logo footer__logo" src="./image/Logo.svg">
+            <p class="footer__description">Furniking is a popular website selling furniture and accessories. With an
+                individual attitude to each
+                customer.</p>
+            <div class="footer__icon-social-bar">
+                <a class="footer__link" href="#footer"><img class="footer__icon-social" src="./image/facebook.svg"></a>
+                <a class="footer__link" href="#footer"><img class="footer__icon-social" src="./image/twitter.svg"></a>
+                <a class="footer__link" href="#footer"><img class="footer__icon-social" src="./image/instagram.svg"></a>
+                <a class="footer__link" href="#footer"><img class="footer__icon-social" src="./image/pinterest.svg"></a>
+            </div>
+
+            <ul class="footer__help">
+                <li>
+                    <h3 class="footer__help_title">Help</h3>
+                </li>
+                <li><a class="footer__link" href="#">Privacy Policy</a></li>
+                <li></li>
+                <li></li>
+                <li></li>
+            </ul>
+        </footer>
     </div>
 
 
