--- a/index.html
+++ b/index.html
@@ -641,12 +641,32 @@
 
             <ul class="footer__help">
                 <li>
-                    <h3 class="footer__help_title">Help</h3>
+                    <h3 class="footer__title">Help</h3>
                 </li>
-                <li><a class="footer__link" href="#">Privacy Policy</a></li>
-                <li></li>
-                <li></li>
-                <li></li>
+                <li><a class="footer__link" href="#footer">Privacy Policy</a></li>
+                <li><a class="footer__link" href="#footer">Shipping & Delivery</a></li>
+                <li><a class="footer__link" href="#footer">Refund Policy</a></li>
+                <li><a class="footer__link" href="#footer">Track Your Order</a></li>
+            </ul>
+
+            <ul class="footer__store">
+                <li>
+                    <h3 class="footer__title">Store</h3>
+                </li>
+                <li><a class="footer__link" href="#footer">Furniture</a></li>
+                <li><a class="footer__link" href="#footer">Table</a></li>
+                <li><a class="footer__link" href="#footer">Sofa</a></li>
+                <li><a class="footer__link" href="#footer">Other</a></li>
+            </ul>
+
+            <ul class="footer__support">
+                <li>
+                    <h3 class="footer__title">Support</h3>
+                </li>
+                <li><a class="footer__link" href="#footer">Feedback</a></li>
+                <li><a class="footer__link" href="#footer">Contact us</a></li>
+                <li><a class="footer__link" href="#footer">Download app</a></li>
+                <li><a class="footer__link" href="#footer">Terms conditions</a></li>
             </ul>
         </footer>
     </div>
