--- a/index.html
+++ b/index.html
@@ -668,6 +668,14 @@
                 <li><a class="footer__link" href="#footer">Download app</a></li>
                 <li><a class="footer__link" href="#footer">Terms conditions</a></li>
             </ul>
+
+            <div class="footer__line-pic"></div>
+
+            <ul class="footer__regulations">
+                <li><a class="footer__link footer__regulation" href="#footer">Privacy</a></li>
+                <li><a class="footer__link footer__regulation" href="#footer">Security</a></li>
+                <li><a class="footer__link footer__regulation" href="#footer">Terms</a></li>
+            </ul>
         </footer>
     </div>
 
