--- a/index.html
+++ b/index.html
@@ -7,10 +7,21 @@
     <title>Furniking</title>
     <link rel="shortcut icon" href="./image/logo_ico.png" type="image/png">
     <link rel="stylesheet" href="./pages/index.css">
+    <link rel="stylesheet" href="./blocks/loading/loading.css">
+    <style>
+        .page {
+            opacity: 0;
+        }
+    </style>
 </head>
 
 <body>
+    <div class="loading">
+        <h1 class="loading__title">Furniking <span class="loading__load">loading...</span></h1>
+    </div>
+
     <div class="page">
+
         <section class="header">
             <div class="header__top-rectangle">
                 <h2 class="header__welcome">Welcome to our online shop</h2>
@@ -34,7 +45,7 @@
             </div>
 
             <ul class="header__menu-user">
-                <li><a class="header__link" href="#"><img class="header__icon" src="./image/shopping_cart_icon.svg"></a>
+                <li><a class="header__link" href="#"><img class="header__icon" src="./image/icon shop_header.svg"></a>
                 </li>
                 <li><a class="header__link" href="#"><img class="header__icon" src="./image/Notification_icon.svg"></a>
                 </li>
